# havok

./: .gitignore  Cargo.toml
havok-discord/: Cargo.toml
havok-discord/src/: cli.rs  command.rs  discord.rs  main.rs
havok-discord/src/command/: alias.rs  meta.rs  roll.rs
havok-discord/src/command/alias/: map.rs  model.rs  utils.rs
havok-discord/src/command/roll/: map.rs  utils.rs
havok-discord/src/discord/: command.rs  handler.rs  havok.rs  help.rs  map.rs  meta.rs  owner.rs  utils.rs
havok-discord/src/discord/command/: alias.rs  havok.rs  meta.rs  owner.rs
havok-lib/: Cargo.toml
havok-lib/src/: climber.rs  constant.rs  dice.rs  error.rs  evaluator.rs  havok.pest  lib.rs  parser.rs  roll.rs  solver.rs
havok-lib/src/dice/: modifier.rs
havok-lib/src/roll/: history.rs  kind.rs
havok-repl/: Cargo.toml
havok-repl/src/: helper.rs  main.rs
