[package]
name = "havok-discord"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-unwrap = "0.10.0"
dotenv = "0.15.0"

[dependencies.clap]
version = "4.2.1"
features = [
    "derive",
    "cargo"
] 

[dependencies.tokio]
version = "1.27.0"
features = [
    "macros",
    "signal",
    "rt-multi-thread",
]

[dependencies.serenity]
version = "0.11.5"
features = [
    "cache",
    "framework",
    "standard_framework",
    "rustls_backend"
]

[dependencies.havok-lib]
path = "../havok-lib"
